--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1820,6 +1820,18 @@
                 <td>Robin Beck</td>
                 <td>3,6 h</td>
             </tr>
+            <tr>
+                <td>03.02</td>
+                <td>CSS leicht angepasst, Ajax Bug im Warenkorb behoben</td>
+                <td>Robin Beck</td>
+                <td>0,3 h</td>
+            </tr>
+            <tr>
+                <td>04.02</td>
+                <td>PHPDoc Kommentare hinzugefügt, Readme an Markdown Syntax angepasst</td>
+                <td>Robin Beck</td>
+                <td>2 h</td>
+            </tr>
         </table>
     </div>
 </body>
