slightly modified documentation

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -23,12 +23,8 @@
     </div>
     <h1>Dokumentation MaskYourFace</h1>
     <div class="content">
-        <b>
-                Eine Gemeinschaftsarbeit von
-                <!-- <br> -->
-                Robin Beck, Hannes Lenz, John Klippstein
-            </b>
-        <hr> Inhaltsverzeichnis: Einleitung Idee Inhalte ER Seiten Code Bilder Aufwand und Zeiten
+        <b>Eine Gemeinschaftsarbeit von Robin Beck, Hannes Lenz, John Klippstein</b>
+        <hr>
         <h2 id="intro">Einleitung</h2>
         <h3>Ausgangssituation</h3>
         <section>
@@ -1831,6 +1827,12 @@
                 <td>PHPDoc Kommentare hinzugefügt, Readme an Markdown Syntax angepasst</td>
                 <td>Robin Beck</td>
                 <td>2 h</td>
+            </tr>
+            <tr>
+                <td>05.02</td>
+                <td>Irgendwas werden wir da schon gemacht haben...</td>
+                <td>Hannes Lenz, John Klippstein, Robin Beck</td>
+                <td>??? h</td>
             </tr>
         </table>
     </div>
