Fehlerbehebung die Zweite

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1830,9 +1830,15 @@
             </tr>
             <tr>
                 <td>05.02</td>
-                <td>Irgendwas werden wir da schon gemacht haben...</td>
+                <td>Besprechung aktueller Stand, Festlegung nächster Aufgaben, Terminsetzung nächstes Meeting</td>
                 <td>Hannes Lenz, John Klippstein, Robin Beck</td>
-                <td>??? h</td>
+                <td>2 h</td>
+            </tr>
+            <tr>
+                <td>05.02</td>
+                <td>Fehlerbhebung</td>
+                <td>John Klippstein</td>
+                <td>5 h</td>
             </tr>
         </table>
     </div>
